fixed footer spacing, updated button chover color and removed padding from wrapper

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,10 +3,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: $forest;
-  height: 80vh;
-  padding: 100px;
+  padding: 50px;
   width: 100%;
-}
+  }
 
 .content-wrap {
   display: flex;
@@ -14,6 +13,7 @@
   align-items: center;
   justify-content: center;
   background-color: $white;
+  padding: 25px;
 }
 
 .content-border {
@@ -31,14 +31,13 @@
 }
 
 .call-to-action {
-  margin-top: 125px;
+ margin-top: 100px;
 }
 .call-to-action p {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: $white;
-  border: 1px solid $forest;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
