--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,4 +1,4 @@
-#green-button {
+.green-button {
     background-color: $forest;
     border: 1px solid $white;
     border-radius: 10px;
@@ -9,16 +9,16 @@
     color: $white;
     margin-left: 25px;
     padding: 10px 20px;
-    transition: all 0.25s ease;
-    -webkit-transition: all 0.25s ease;
-    -moz-transition: all 0.25s ease;
-    -ms-transition: all 0.25s ease;
-    -o-transition: all 0.25s ease;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
 }
-#green-button:hover{
-    background-color: $kelly;
-    border: 1px solid $sky;
-    box-shadow: inset 0 0 8px $sky;
-    color: $white;
+.green-button:hover{
+    background-color: $forest-light;
+    border: 1px solid $forest;
+    box-shadow: inset 0 0 8px $forest;
+    color: $forest;
     text-decoration: none;
 }
