--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,9 +5,9 @@
     color: $forest;
     height: 250px;
     left: 0px;
+    bottom: 0px;
     padding: 30px;
-    top: 1200px;
-    width: 100%;0
+    width: 100%;
 }
 
 .footer-content-wrap{
@@ -19,12 +19,12 @@
 }
 
 .media-link {
-    height: 32px;
+    height: 40px;
     margin: 0 10px;
-    width: 32px;
+    width: 40px;
 }
 
 p {
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1;
 }
