--- a/app/assets/stylesheets/components/_utilities.scss
+++ b/app/assets/stylesheets/components/_utilities.scss
@@ -7,8 +7,7 @@ body {
   position: relative;
   min-height: 100vh;
   margin-bottom: 0px!important;
-}
-
-#wrapper{
   padding-bottom:250px;
 }
+
+
